# cookery-notes

./: .dockerignore  .gitignore  Dockerfile  Gemfile  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.kamal/: secrets
app/controllers/: application_controller.rb  recipes_controller.rb  sessions_controller.rb
app/models/: ingredient.rb  ingredient_group.rb  instruction.rb  recipe.rb  recipe_part.rb
app/services/: jina_fetcher.rb  recipe_extractor.rb
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_recipes.py
backend/app/: config.py  db.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  recipes.py  router.py
backend/app/core/: security.py
backend/app/models/: recipe.py
backend/app/prompts/: recipe_extraction.md
backend/app/schemas/: auth.py  recipe.py
backend/app/services/: extraction.py  jina.py  recipes.py
backend/tests/: test_extraction_contract.py  test_security.py
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
config/credentials/: test.yml.enc
config/initializers/: e2e_fakes.rb
db/: schema.rb  seeds.rb  structure.sql
docs/: deploy-hetzner.md  rails-inertia-migration.md
e2e/: flow.spec.ts
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
public/: manifest.webmanifest  sw.js
spec/: rails_helper.rb
(+81 files in other folders)
